# httplite

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  python-publish.yml
src/httplite/: __init__.py  client.py  py.typed
tests/: test_client.py
