[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "httplite"
version = "0.1.0"
description = "Lightweight async HTTP client with automatic retry"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "httpx>=0.24",
    "tenacity>=8.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
]

[project.urls]
Source = "https://github.com/kejun91/httplite"

[tool.hatch.build.targets.wheel]
packages = ["src/httplite"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "master"
build_command = "python -m pip install build && python -m build"
